# ESP32-P4

./: .gitignore  ESP32-P4_HMI_Specifications.docx  Kconfig.projbuild  PLAN_BMS_CAN.md  README.md  TINYBMS_CORRECTIONS_ESP32_P4.md  TINYBMS_MODBUS_PROTOCOL.md  UART_PROTOCOL_FIXES.md  code_audit.py  code_audit_report.json  run_test_macos.sh  test_tinybms.sh  test_tinybms_quick.sh
Exemple/: GUIDE_TEST_TINYBMS.md  QUICKSTART.md  README.md  run_test.sh  test_tinybms.py
Exemple/Gemini/: README.md  TinyBMS.cpp  TinyBMS.h  TinyBMS_Defs.h  TinyBMS_service.ts  TinyBmsService.ts  main.cpp
Exemple/TinyBMS-iOS-macOS/: MIGRATION.md  Package.swift  QUICKSTART.md  README.md
Exemple/TinyBMS-macOS-App/: ANALYSIS_AND_IMPROVEMENTS.md  QUICKSTART-MAC-MINI.md  README.md  RegisterMap_Complete.swift  TinyBMSProtocol_Corrected.swift  create-project.sh
Exemple/TinyBMS-web/: ANALYSIS_AND_CORRECTIONS.md  PROTOCOL-CONFIGURATION.md  QUICK_START.md  README.md  VERIFICATION-WRITE-PROTOCOL.md  package.json  server.js  simulator.js  start_server.sh  test_read_all_settings.js  test_simple.js  tinybms.js
Exemple/mac-local/: README.md
components/can_publisher/: CMakeLists.txt  README.md  can_publisher.c  can_publisher.h  can_publisher_orchestrator.cpp  can_publisher_orchestrator.hpp  conversion_table.h  cvl_controller.h  cvl_logic.cpp  cvl_logic.h  tinybms_adapter.c  tinybms_adapter.cpp  tinybms_adapter.h
components/can_victron/: CMakeLists.txt  README.md  can_victron.c  can_victron.cpp  can_victron.h  can_victron_driver.cpp  can_victron_driver.hpp
components/config_manager/: CMakeLists.txt  config_manager.cpp  config_manager.h  config_manager_core.cpp  config_manager_core.hpp
components/diagnostic_logger/: CMakeLists.txt  diagnostic_logger.c  diagnostic_logger.h  diagnostic_logger_core.cpp  diagnostic_logger_core.hpp
components/event_bus/: CMakeLists.txt  event_bus.c  event_bus.cpp  event_bus.h  event_bus_core.cpp  event_bus_core.hpp
components/event_types/: event_types.h
components/gui_lvgl/: CMakeLists.txt  README.md  gui_init.c  gui_init.cpp  gui_init.h  gui_init.hpp  pack_stats_utils.cpp  screen_alerts.c  screen_alerts.cpp  screen_alerts.h  screen_battery.c  screen_battery.cpp  screen_battery.h  screen_bms_control.cpp  screen_bms_control.h  screen_can_config.c  screen_can_config.h  screen_can_status.c  screen_can_status.cpp  screen_can_status.h  screen_cells.cpp  screen_cells.h  screen_config.c  screen_config.cpp  screen_config.h  screen_dashboard.c  screen_dashboard.cpp  screen_dashboard.h  screen_history.c  screen_history.cpp  screen_history.h  screen_home.c  screen_home.cpp  screen_home.h  screen_power.c  screen_power.cpp  screen_power.h  screen_tinybms_config.c  screen_tinybms_config.h  screen_tinybms_status.c  (+10 more)
components/gui_lvgl/include/: gui_format.hpp  gui_theme.hpp  pack_stats_utils.hpp  ui_theme.hpp
components/gui_lvgl/widgets/: CMakeLists.txt
components/gui_lvgl/widgets/examples/: dashboard_gauges_example.c  keyboard_example.c
components/gui_lvgl/widgets/include/: widget_cell_bar.h  widget_gauge_circular.h  widget_gauge_semicircular.h  widget_keyboard.h  widget_soc_gauge.h  widget_status_indicator.h  widget_value_display.h
components/gui_lvgl/widgets/src/: widget_cell_bar.c  widget_gauge_circular.c  widget_gauge_semicircular.c  widget_keyboard.c  widget_soc_gauge.c  widget_status_indicator.c  widget_value_display.c
components/history_manager/: CMakeLists.txt  history_manager.c
components/history_model/: CMakeLists.txt  HistoryModel.cpp  HistoryModel.hpp  history_model.c  history_model.cpp  history_model.h  history_model_c_api.cpp
components/mqtt_gateway/: CMakeLists.txt  mqtt_gateway.c  mqtt_gateway.cpp  mqtt_gateway.h
components/net_client/: CMakeLists.txt  NetClient.cpp  NetClient.hpp  net_client.c  net_client.cpp  net_client.h  net_client_c_api.cpp
components/network/: CMakeLists.txt  network_publisher.c  network_publisher.cpp  network_publisher.h  status_endpoint.cpp  status_endpoint.h
components/remote_event_adapter/: CMakeLists.txt  remote_event_adapter.c  remote_event_adapter.cpp  remote_event_adapter.h
components/telemetry_model/: CMakeLists.txt  telemetry_model.c  telemetry_model.cpp  telemetry_model.h
components/tinybms_client/: CMakeLists.txt  tinybms_client.c  tinybms_client.cpp  tinybms_client.h  tinybms_protocol.c  tinybms_protocol.cpp  (+1 more)
docs/: GAUGE_WIDGETS.md  HMI_IMPROVEMENTS.md  KEYBOARD_WIDGET.md  MODBUS_TESTING_GUIDE.md  PLAN_BMS_CAN.md  PROTOCOL_COMPARISON_WEB_VS_ESP32.md  README.md  TINYBMS_SINGLE_PORT_HIGH_POWER_PRECHARGE.md  TINYBMS_UART_REFERENCE.md  can_enhancements.md  config_manager_enhancements.md  core_components_enhancements.md  gui.md  persistence.md  point  rapport_UART_protocol.md  tinybms_client.c  tinybms_client.cpp  tinybms_client.h  tinybms_client.hpp  tinybms_commands_reference.md  tinybms_defs.h  tinybms_protocol_full.h  uart_performance_suggestions.md
event_bus/: event_bus.h
event_types/: event_types.h
gui_lvgl/: gui_init.c  screen_battery.h  screen_cells.c  screen_config.c  screen_config.h  screen_home.c  screen_home.h  screen_power.h
mac-local/: package.json
main/: app_main.c.c  app_main.cpp  hmi_main.c  hmi_main.cpp  hmi_main.h  operation_mode.c  operation_mode.cpp  operation_mode.h  stats_aggregator.c  stats_aggregator.cpp  stats_aggregator.h
net_client/: net_client.h
remote_event_adapter/: remote_event_adapter.h
tests/: CMakeLists.txt  gui_format_test.cpp  pack_stats_utils_test.cpp
tests/stubs/: lvgl.h
(+238 files in other folders)
