idf_component_register(
    SRCS "gui_init.cpp"
         "ui_i18n.c"
         "screen_home.cpp"
         "pack_stats_utils.cpp"
         "screen_dashboard.c"
         "screen_battery.cpp"
         "screen_cells.cpp"
         "screen_power.cpp"
         "screen_config.cpp"
         "screen_alerts.c"
         "screen_tinybms_status.c"
         "screen_tinybms_config.c"
         "screen_can_status.c"
         "screen_can_config.c"
         "screen_bms_control.c"
         "screen_history.c"
         "ui_notifications.c"
         "ui_theme.c"
    INCLUDE_DIRS "." "include"
    REQUIRES lvgl esp_lvgl_port event_bus event_types tinybms_client tinybms_model can_victron can_publisher
)
